# cpp-samples

./: CMakeLists.txt
batch/: CMakeLists.txt  Dockerfile  README.md  simple.cc  vcpkg.json
batch/application/: CMakeLists.txt  README.md
batch/application/sample-application/: CMakeLists.txt  Dockerfile
batch/application/sample-application/data/input/: hello.txt
batch/application/sample-application/src/: CMakeLists.txt  main.cc
batch/cluster/: application.json
batch/cluster/application/: CMakeLists.txt  Dockerfile  README.md  job.sh  vcpkg.json
batch/cluster/application/src/: main.cc
batch/simple/: CMakeLists.txt  Dockerfile  README.md  cloudbuild.yaml  simple.cc  vcpkg.json
bigquery/read/: CMakeLists.txt  README.md  arrow_read.cc  avro_read.cc  vcpkg.json
bigquery/read/avro/: CMakeLists.txt  avro_read.cc
bigquery/repro/: CMakeLists.txt  README.md  avro_read.cc  vcpkg.json
ci/: devtools.Dockerfile
gcs-parallel-composite/: README.md
pubsub-open-telemetry/: BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE.bazel  parse_args.cc  parse_args.h  publisher.cc  publisher.md  quickstart_coroutines.cc  vcpkg.json
